add array comments
